--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/ndtr2000/Lottery/issues"
   },
-  "homepage": "https://github.com/ndtr2000/Lottery#readme"
+  "homepage": "https://github.com/ndtr2000/Lottery#readme",
+  "dependencies": {
+    "@truffle/hdwallet-provider": "^1.6.0",
+    "dotenv": "^10.0.0"
+  }
 }
