--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ndtr2000/Lottery#readme",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.3",
     "@truffle/hdwallet-provider": "^1.6.0",
     "dotenv": "^10.0.0"
   }
